--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "tslint \"src/**/*.ts\"",
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "surge": "cp CNAME .surgeignore ./dist && surge ./dist"
   },
   "private": true,
   "dependencies": {
