feat(repositoryComponent): add repositoryComponent

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ node_modules
 npm-debug.log
 src/app/**/*.js
 src/app/**/*.js.map
+src/main.js
+src/main.js.map
+src/system-config.js
+src/system-config.js.map
