--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^2.0.0-beta.0",
     "es6-shim": "^0.35.0",
     "firebase": "^2.4.2",
+    "ng2-bootstrap": "^1.0.16",
     "node-sass": "^3.7.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
