--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^2.0.0-beta.0",
     "es6-shim": "^0.35.0",
     "firebase": "^2.4.2",
+    "moment": "^2.13.0",
     "ng2-bootstrap": "^1.0.16",
     "node-sass": "^3.7.0",
     "reflect-metadata": "0.1.3",
@@ -32,7 +33,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.0",
+    "angular-cli": "^1.0.0-beta.5",
     "clang-format": "^1.0.35",
     "codelyzer": "0.0.14",
     "ember-cli-inject-live-reload": "^1.4.0",
